--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,3 +1,62 @@
 .header {
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 60px 0 60px 60px;
+
+  .name {
+	display: flex;
+	flex-direction: column;
+  animation: fade-in 1500ms cubic-bezier(0.7, 0, 0.3, 1);
+	
+  	span {
+  		display: block;
+  		margin: 5px 0;
+  		font-size: 18px;
+  		letter-spacing: 6px;
+  		font-weight: 500;
+  		color: white;
+  	}
+  }
+
+  .action-button {
+  	width: 60px;
+  	height: 60px;
+  	background: var(--color4);
+  	border-radius: 50%;
+  	display: flex;
+  	justify-content: center;
+  	align-items: center;
+  	cursor: pointer;
+  	transition: all 300ms ease-in-out;
+    animation: fade-in 1500ms cubic-bezier(0.7, 0, 0.3, 1);
+
+  	&:hover {
+  		background: #fff;
+
+  		svg {
+  			fill: var(--color4);
+  		}
+  	}
+
+  	svg {
+  		width: 50%;
+  		fill: #fff;
+  		transition: all 300ms ease-in-out;
+  	}
+  }
+
+  @keyframes fade-in {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
 }
