--- a/src/pages/home/home.styles.scss
+++ b/src/pages/home/home.styles.scss
@@ -1,13 +1,25 @@
 .home {
-	position: relative;
+	height: 100vh;
 
-	.name {
-		left: 50%;
-		position: absolute;
+	.side-panel {
+		content: "";
+		background: var(--color1);
+		position: fixed;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		width: 40%;
+		animation: slide-left 1500ms cubic-bezier(0.7, 0, 0.3, 1);
 	}
 
-	.other {
-		position: absolute;
-		top: 1000px;
+	@keyframes slide-left {
+		0% {
+			opacity: 0;
+			transform: translateX(100%);
+		}
+		100% {
+			opacity: 1;
+			transform: translateX(0);
+		}
 	}
 }
