--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -28,6 +28,16 @@
 		}
 	}
 
+	.nav {
+		color: white;
+		transition: all 300ms ease-in-out;
+
+		&.selected {
+			color: var(--color4);
+		}
+	}
+	
+
 	.social {
 		display: flex;
 		flex-direction: column;
@@ -43,7 +53,7 @@
 			justify-content: center;
 			align-items: center;
 			margin: 10px 0;
-			opacity: 0.4;
+			opacity: 0.3;
 			transition: all 300ms ease-in-out;
 
 			&:hover {
