--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -10,9 +10,17 @@
   padding: 60px 0 60px 60px;
 
   .name {
-	display: flex;
-	flex-direction: column;
-  animation: fade-in 1500ms cubic-bezier(0.7, 0, 0.3, 1);
+  	display: flex;
+  	flex-direction: column;
+    animation: fade-in 1500ms cubic-bezier(0.7, 0, 0.3, 1);
+    cursor: pointer;
+    font-family: unset;
+
+    &:hover {
+      span {
+        color: var(--color4);
+      }
+    }
 	
   	span {
   		display: block;
@@ -21,6 +29,7 @@
   		letter-spacing: 6px;
   		font-weight: 500;
   		color: white;
+      transition: all 300ms ease-in-out;
   	}
   }
 
