--- a/src/App.scss
+++ b/src/App.scss
@@ -16,7 +16,6 @@ html {
 }
 
 body {
-  overflow-y: auto;
   color: var(--white);
   overflow-x: hidden;
   font-family: 'Inconsolata', monospace;
@@ -46,5 +45,39 @@ a {
 
   &:hover {
     color: var(--color4);
+  }
+}
+
+.App {
+  @media screen and (max-width: 991px) {
+    .bottom-panel {
+      width: 100%;
+      height: 200px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  .side-panel {
+    content: "";
+    background: var(--color1);
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 40%;
+    animation: slide-left 1500ms cubic-bezier(0.7, 0, 0.3, 1);
+  }
+
+  @keyframes slide-left {
+    0% {
+      opacity: 0;
+      transform: translateX(100%);
+    }
+    100% {
+      opacity: 1;
+      transform: translateX(0);
+    }
   }
 }
