--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -1,5 +1,5 @@
 .footer {
-	position: fixed;
+	position: absolute;
 	top: 0;
 	right: 0;
 	bottom: 0;
@@ -11,6 +11,13 @@
 	align-items: center;
 	padding: 60px 0;
 	animation: slide-down 1500ms cubic-bezier(0.7, 0, 0.3, 1);
+
+	@media screen and (max-width: 991px) {
+		border-left: unset;
+		padding: 47px 47px 47px 0;
+		justify-content: flex-start;
+		align-items: flex-end;
+	}
 
 	> * {
 		animation: fade-in-pause 2000ms ease-in-out;
@@ -29,42 +36,22 @@
 	}
 
 	.nav {
+		opacity: 0.6;
 		color: white;
 		transition: all 300ms ease-in-out;
 
-		&.selected {
-			color: var(--color4);
+		&:hover {
+			opacity: 1;
 		}
-	}
-	
 
-	.social {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
+		@media screen and (max-width: 991px) {
+			line-height: 28px;
+			font-size: 19px;
+		}
 
-		.social-button {
-			width: 40px;
-			height: 40px;
-			border-radius: 50%;
-			background: white;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			margin: 10px 0;
-			opacity: 0.3;
-			transition: all 300ms ease-in-out;
-
-			&:hover {
-				opacity: 1;
-			}
-
-			svg {
-				width: 50%;
-				height: 50%;
-				fill: var(--color1);
-			}
+		&.selected {
+			opacity: 1;
+			color: var(--color4);
 		}
 	}
 
