--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,5 +1,5 @@
 .header {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
@@ -8,6 +8,10 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 60px 0 60px 60px;
+  
+  @media screen and (max-width: 991px) {
+    padding: 47px 0 47px 47px;
+  }
 
   .name {
   	display: flex;
@@ -24,16 +28,23 @@
 	
   	span {
   		display: block;
-  		margin: 5px 0;
   		font-size: 18px;
+      line-height: 29px;
   		letter-spacing: 6px;
   		font-weight: 500;
   		color: white;
       transition: all 300ms ease-in-out;
+
+      @media screen and (max-width: 991px) {
+        font-size: 14px;
+      }
   	}
   }
 
   .action-button {
+    position: fixed;
+    bottom: 60px;
+    left: 60px;
   	width: 60px;
   	height: 60px;
   	background: var(--color4);
@@ -44,6 +55,10 @@
   	cursor: pointer;
   	transition: all 300ms ease-in-out;
     animation: fade-in 1500ms cubic-bezier(0.7, 0, 0.3, 1);
+
+    @media screen and (max-width: 991px) {
+      left: 35px;
+    }
 
   	&:hover {
   		background: #fff;
