--- a/src/components/work-item/work-item.styles.scss
+++ b/src/components/work-item/work-item.styles.scss
@@ -3,21 +3,48 @@
 	height: 100%;
 	display: flex;
 	align-items: flex-end;
+	position: relative;
+	padding: 30px;
+	cursor: pointer;
+	background: var(--color2);
+
+	&:hover {
+
+		.image {
+			opacity: 0.15
+		}
+
+		.details {
+			opacity: 1;
+			transform: translateY(0);
+		}
+	}
 
 	.image {
+		opacity: 1;
 		position: absolute;
 		top: 0;
 		left: 0;
-		width: 100%;
-		height: 100%;
+		right: 0;
+		bottom: 0;
 		background-position: center;
 		background-size: cover;
 		background-repeat: no-repeat;
 		overflow: hidden;
+		transition: all 300ms ease-out;
 	}
 
 	.details {
 		display: flex;
 		flex-direction: column;
+		color: white;
+		font-size: 1em;
+		transition: all 300ms ease-out;
+		transform: translateY(20px);
+		opacity: 0;
+
+		h3 {
+			margin: 5px 0;
+		}
 	}
 }
