--- a/src/pages/work/work.styles.scss
+++ b/src/pages/work/work.styles.scss
@@ -1,12 +1,26 @@
 .work {
-	position: relative;
 	width: 100%;
-	height: 100%;
-	padding: 200px 150px 100px 250px;
+	padding: 150px 300px;
 
-	.image {
-		position: absolute;
-		width: 50%;
-		height: 400px;
+	@media screen and (max-width: 991px) {
+		padding: 150px 47px 0 47px;
+	}
+
+	.work-collection {
+		width: 100%;
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+		grid-template-rows: repeat(4, 1fr);
+		grid-template-areas: 
+			"spent spent too too"
+			"spent spent too too"
+			"tele bon bon wechat"
+			"tele bon bon wechat";
+		grid-column-gap: 0.8em;
+		grid-row-gap: 0.8em;
+
+		.box {
+			min-height: 600px;
+		}
 	}
 }
