--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -1,20 +1,23 @@
 .footer {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	right: 0;
 	bottom: 0;
-	width: 150px;
+	width: 10%;
 	border-left: dashed 1px var(--color4);
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
-	padding: 60px 0;
+	padding: 5% 0;
 	animation: slide-down 1500ms cubic-bezier(0.7, 0, 0.3, 1);
 
 	@media screen and (max-width: 991px) {
+		position: absolute;
 		border-left: unset;
-		padding: 47px 47px 47px 0;
+		padding: unset;
+		top: 5%;
+		right: 5%;
 		justify-content: flex-start;
 		align-items: flex-end;
 	}
