--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,16 +1,15 @@
 .header {
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: fixed;
+  top: 5%;
+  left: 5%;
   bottom: 0;
-  width: 250px;
+  width: 20%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 60px 0 60px 60px;
   
   @media screen and (max-width: 991px) {
-    padding: 47px 0 47px 47px;
+    position: absolute;
   }
 
   .name {
@@ -35,16 +34,22 @@
   		color: white;
       transition: all 300ms ease-in-out;
 
+      @media screen and (max-width: 1400px) {
+        font-size: 16px;
+        line-height: 25px;
+      }
+
       @media screen and (max-width: 991px) {
         font-size: 14px;
+        line-height: 20px;
       }
   	}
   }
 
   .action-button {
     position: fixed;
-    bottom: 60px;
-    left: 60px;
+    bottom: 5%;
+    left: 5%;
   	width: 60px;
   	height: 60px;
   	background: var(--color4);
@@ -55,10 +60,6 @@
   	cursor: pointer;
   	transition: all 300ms ease-in-out;
     animation: fade-in 1500ms cubic-bezier(0.7, 0, 0.3, 1);
-
-    @media screen and (max-width: 991px) {
-      left: 35px;
-    }
 
   	&:hover {
   		background: #fff;
