added animation in of works and adjusted for mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -67,6 +67,7 @@ a {
     right: 0;
     bottom: 0;
     width: 40%;
+    opacity: 0.6;
     animation: slide-left 1500ms cubic-bezier(0.7, 0, 0.3, 1);
   }
 
