--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -9,13 +9,15 @@
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
-	padding: 5% 0;
+	padding: 3% 0;
 	animation: slide-down 1500ms cubic-bezier(0.7, 0, 0.3, 1);
 
 	@media screen and (max-width: 991px) {
 		position: absolute;
 		border-left: unset;
 		padding: unset;
+		width: unset;
+		bottom: unset;
 		top: 5%;
 		right: 5%;
 		justify-content: flex-start;
