--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -2,7 +2,6 @@
   position: fixed;
   top: 5%;
   left: 5%;
-  bottom: 0;
   width: 20%;
   display: flex;
   flex-direction: column;
@@ -61,6 +60,11 @@
   	cursor: pointer;
   	transition: all 300ms ease-in-out;
     animation: fade-in 1500ms cubic-bezier(0.7, 0, 0.3, 1);
+
+    @media screen and (max-width: 991px) {
+      width: 46px;
+      height: 46px;
+    }
 
   	&:hover {
   		background: #fff;
