--- a/src/pages/about/about.styles.scss
+++ b/src/pages/about/about.styles.scss
@@ -1,3 +1,66 @@
 .about {
-	
+	width: 65%;
+	margin: 2% auto;
+
+	@media screen and (max-width: 991px) {
+		width: 70%;
+		margin: 150px auto 0 auto;
+	}
+
+	@media screen and (max-width: 767px) {
+		width: 88%;
+	}
+
+	.intro {
+		font-size: 300%;
+		line-height: 52px;
+		margin-top: 0;
+		font-weight: 700;
+
+		@media screen and (max-width: 991px) {
+			line-height: 48px;
+			font-size: 250%;
+		}
+
+		@media screen and (max-width: 575px) {
+			line-height: 34px;
+			font-size: 160%;
+		}
+	}
+
+	.interest {
+		font-size: 160%;
+		margin-bottom: 40px;
+
+		@media screen and (max-width: 991px) {
+			font-size: 120%;
+		}
+
+		@media screen and (max-width: 575px) {
+			font-size: 116%;
+		}
+	}
+
+	.contact {
+		display: flex;
+		flex-direction: column;
+
+		.row {
+			display: flex;
+			margin-bottom: 8px;
+
+			> * {
+				display: block;
+			}
+
+			:first-child {
+				margin-right: 16px;
+				color: var(--color4);
+			}
+
+			a {
+				font-size: unset;
+			}
+		}
+	}
 }
