--- a/src/components/social-buttons/social-buttons.styles.scss
+++ b/src/components/social-buttons/social-buttons.styles.scss
@@ -16,8 +16,21 @@
 		justify-content: center;
 		align-items: center;
 		margin: 10px;
-		opacity: 0.3;
 		transition: all 300ms ease-in-out;
+		opacity: 0.3;
+		animation: fade-in-pause-30 2000ms ease-in-out;
+
+		@keyframes fade-in-pause-30 {
+			0% {
+				opacity: 0;
+			}
+			70% {
+				opacity: 0;
+			}
+			100% {
+				opacity: 0.3;
+			}
+		}
 
 		&:hover {
 			opacity: 1;
