--- a/src/App.scss
+++ b/src/App.scss
@@ -68,6 +68,10 @@ a {
     z-index: -1;
     animation-fill-mode: forwards;
     animation: slide-left 1500ms cubic-bezier(0.7, 0, 0.3, 1);
+
+    @media screen and (max-width: 786px) {
+      opacity: 0;
+    }
   }
 
   @keyframes slide-left {
