--- a/src/pages/home/home.styles.scss
+++ b/src/pages/home/home.styles.scss
@@ -1,5 +1,44 @@
 .home {
 	height: 100vh;
+	white-space: nowrap;
+	overflow: hidden;
+
+	.home-content {
+		height: 100vh;
+		width: 100vw;
+		position: fixed;
+
+		img {
+			width: 35%;
+			position: absolute;
+			left: 0;
+			top: 50%;
+			transform: translate(0, -50%);
+			z-index: -1;
+
+			@media screen and (max-width: 786px) {
+				top: 60px;
+				width: 97%;
+				transform: unset;
+			}
+		}	
+
+		.image {
+			display: inline-block;
+			width: 40vw;
+			height: 300px;
+			margin: 0 10vw;
+			background: green;
+
+			&:first-child {
+				margin-left: 80vw;
+			}
+
+			&:last-child {
+				margin-right: 0;
+			}
+		}
+	}
 
 	
 }
