fixed some animations and added video option to work

--- a/src/pages/work/work.styles.scss
+++ b/src/pages/work/work.styles.scss
@@ -16,9 +16,7 @@
 			"spent spent too too"
 			"spent spent too too"
 			"tele tele tele wechat"
-			"tele tele tele wechat"
-			"bon bon bon bon"
-			"bon bon bon bon";
+			"tele tele tele wechat";
 		grid-column-gap: 0.8em;
 		grid-row-gap: 0.8em;
 
@@ -30,10 +28,10 @@
 				"spent spent"
 				"too too"
 				"too too"
-				"tele wechat"
-				"tele wechat"
-				"bon bon"
-				"bon bon";
+				"tele tele"
+				"tele tele"
+				"wechat wechat"
+				"wechat wechat";
 		}
 
 		&::before {
