--- a/src/components/carousel-item/carousel-item.styles.scss
+++ b/src/components/carousel-item/carousel-item.styles.scss
@@ -1,17 +1,14 @@
 .carousel-item {
 	display: inline-block;
 	width: 40vw;
-	height: 350px;
-	margin: 0 10vw;
-	background: transparent;
+	margin: 0 5vw;
+	position: relative;
 	transition: all 300ms cubic-bezier(0.7, 0, 0.3, 1);
 
-	&:first-child {
-		margin-left: 80vw;
-	}
-
-	&:last-child {
-		margin-right: 0;
+	&:after {
+		padding-bottom: 56.25%;
+		content: "";
+		display: block;
 	}
 
 	&.show {
@@ -32,27 +29,45 @@
 		}
 	}
 
-	.image {
-		width: 100%;
-		height: 80%;
-		background-size: cover;
-		background-position: center;
-		box-shadow: 5px 5px 140px -18px rgba(0,0,0,0.8);
+	&:first-child {
+		margin-left: 80vw;
 	}
 
-	.title {
-		width: 100%;
-		height: 20%;
-		display: flex;
-		justify-content: space-between;
-		transition: all 300ms ease-in-out;
+	&:last-child {
+		margin-right: 0;
+	}
 
-		&.show {
-			opacity: 1;
+	.inner-item {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: green;
+		
+
+		.image {
+			width: 100%;
+			height: 80%;
+			background-size: cover;
+			background-position: center;
+			box-shadow: 5px 5px 140px -18px rgba(0,0,0,0.8);
 		}
 
-		&.hide {
-			opacity: 0;
+		.title {
+			width: 100%;
+			height: 20%;
+			display: flex;
+			justify-content: space-between;
+			transition: all 300ms ease-in-out;
+
+			&.show {
+				opacity: 1;
+			}
+
+			&.hide {
+				opacity: 0;
+			}
 		}
 	}
 }
