--- a/src/components/carousel/carousel.styles.scss
+++ b/src/components/carousel/carousel.styles.scss
@@ -42,7 +42,8 @@
 			height: 60px;
 			border-radius: 25px;
 			border: solid 2px white;
-			margin-bottom: 10px;
+			margin-bottom: 22px;
+			animation: slide-up 1400ms cubic-bezier(0.7, 0, 0.3, 1);
 
 			.line {
 				background: white;
@@ -64,6 +65,34 @@
 					transform: translateX(-50%) rotate(-45deg);
 				}
 			}
+
+			@keyframes slide-up {
+			    0% {
+			      opacity: 0;
+			      transform: translateY(15px);
+			    }
+			    100% {
+			      opacity: 1;
+			      transform: translateY(0);
+			    }
+		    }
+		}
+
+		.scroll {
+			letter-spacing: 2px;
+			font-size: 110%;
+			animation: slide-down 1400ms cubic-bezier(0.7, 0, 0.3, 1);
+
+			@keyframes slide-down {
+			    0% {
+			      opacity: 0;
+			      transform: translateY(-15px);
+			    }
+			    100% {
+			      opacity: 1;
+			      transform: translateY(0);
+			    }
+		    }
 		}
 	}
 
