--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -10,7 +10,7 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 3% 0;
-	animation: slide-down 1500ms cubic-bezier(0.7, 0, 0.3, 1);
+	animation: footer-slide-down 1500ms cubic-bezier(0.7, 0, 0.3, 1);
 
 	@media screen and (max-width: 991px) {
 		position: absolute;
@@ -57,7 +57,7 @@
 		}
 	}
 
-	@keyframes slide-down {
+	@keyframes footer-slide-down {
 		0% {
 			transform: translateY(-100%);
 		}
