--- a/src/pages/home/home.styles.scss
+++ b/src/pages/home/home.styles.scss
@@ -2,6 +2,7 @@
 	height: 100vh;
 	white-space: nowrap;
 	overflow: hidden;
+	animation: fade-in 600ms ease-in-out;
 
 	.home-content {
 		height: 100vh;
