--- a/src/components/carousel-item/carousel-item.styles.scss
+++ b/src/components/carousel-item/carousel-item.styles.scss
@@ -3,6 +3,8 @@
 	width: 40vw;
 	margin: 0 5vw;
 	position: relative;
+	background: green;
+	box-shadow: 5px 5px 140px -18px rgba(0,0,0,0.8);
 	transition: all 300ms cubic-bezier(0.7, 0, 0.3, 1);
 
 	&:after {
@@ -37,37 +39,35 @@
 		margin-right: 0;
 	}
 
+	@media screen and (max-width: 767px) {
+		&:first-child {
+			margin: 30px;
+		}
+
+		&:last-child {
+			margin: 30px;
+		}
+
+		display: unset;
+		width: 80%;
+		margin: 30px;
+	}
+
 	.inner-item {
 		position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background: green;
-		
+		padding: 10px;
+		transition: all 300ms ease-in-out;
 
-		.image {
-			width: 100%;
-			height: 80%;
-			background-size: cover;
-			background-position: center;
-			box-shadow: 5px 5px 140px -18px rgba(0,0,0,0.8);
+		&.show {
+			opacity: 1;
 		}
 
-		.title {
-			width: 100%;
-			height: 20%;
-			display: flex;
-			justify-content: space-between;
-			transition: all 300ms ease-in-out;
-
-			&.show {
-				opacity: 1;
-			}
-
-			&.hide {
-				opacity: 0;
-			}
+		&.hide {
+			opacity: 0;
 		}
 	}
 }
