--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -12,6 +12,7 @@
 	padding: 3% 0;
 	animation: footer-slide-down 1500ms cubic-bezier(0.7, 0, 0.3, 1);
 
+
 	@media screen and (max-width: 991px) {
 		position: absolute;
 		border-left: unset;
@@ -22,6 +23,16 @@
 		right: 5%;
 		justify-content: flex-start;
 		align-items: flex-end;
+
+		&.is-home {
+			position: fixed;
+		}
+	}
+
+	@media screen and (max-width: 767px) {
+		&.is-home {
+			position: absolute;
+		}
 	}
 
 	.nav {
