--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -6,9 +6,19 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  
+
   @media screen and (max-width: 991px) {
     position: absolute;
+
+    &.is-home {
+      position: fixed;
+    }
+  }
+  
+  @media screen and (max-width: 767px) {
+    &.is-home {
+      position: absolute;
+    }
   }
 
   .name {
