--- a/src/pages/home/home.styles.scss
+++ b/src/pages/home/home.styles.scss
@@ -4,18 +4,31 @@
 	overflow: hidden;
 	animation: fade-in 600ms ease-in-out;
 
+	@media screen and (max-width: 767px) {
+		height: unset;
+	}
+
 	.home-content {
 		height: 100vh;
 		width: 100vw;
-		position: fixed;	
+		position: fixed;
 
-		.home-gif {
-			width: 80%;
-			position: absolute;
-			left: 48%;
-			top: 60px;
-			transform: translateX(-50%);
-			z-index: -1;
-		}
+		@media screen and (max-width: 767px) {
+			position: static;
+			height: unset;
+
+			.home-gif {
+				width: 80%;
+				margin: 60px 11% 0 9%;
+				z-index: -1;
+			}
+
+			.carousel-mobile-list {
+				width: 100%;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+			}
+		}	
 	}
 }
