--- a/src/components/carousel-item/carousel-item.styles.scss
+++ b/src/components/carousel-item/carousel-item.styles.scss
@@ -3,8 +3,7 @@
 	width: 40vw;
 	margin: 0 5vw;
 	position: relative;
-	background: green;
-	box-shadow: 5px 5px 140px -18px rgba(0,0,0,0.8);
+	background: var(--color1);
 	transition: all 300ms cubic-bezier(0.7, 0, 0.3, 1);
 
 	&:after {
@@ -16,13 +15,16 @@
 	&.show {
 		opacity: 1;
 		transform: scale(1.08);
+		box-shadow: 5px 5px 140px -18px rgba(0,0,0,0.8);
 	}
 
 	&.hide {
-		opacity: 0.2;
+		opacity: 0.3;
+		box-shadow: none;
 
 		&:hover {
 			opacity: 1;
+			box-shadow: 5px 5px 140px -18px rgba(0,0,0,0.8);
 			transform: scale(1.08);
 
 			.title {
@@ -53,13 +55,23 @@
 		margin: 30px;
 	}
 
+	.background-gif {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-image: url('../../assets/card_1.gif');
+		background-size: cover;
+		background-position: center;
+	}
+
 	.inner-item {
 		position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
 		height: 100%;
-		padding: 10px;
 		transition: all 300ms ease-in-out;
 
 		&.show {
