--- a/src/components/carousel/carousel.styles.scss
+++ b/src/components/carousel/carousel.styles.scss
@@ -3,8 +3,7 @@
 	height: 100%;
 	width: 100%;
 	white-space: nowrap;
-	overflow-x: hidden;
-	overflow-y: scroll;
+	overflow: hidden;
 
 		.port {
 			width: 35%;
