changed mouse on work page and added to carousel items

--- a/src/components/work-item/work-item.styles.scss
+++ b/src/components/work-item/work-item.styles.scss
@@ -5,7 +5,7 @@
 	align-items: flex-end;
 	position: relative;
 	padding: 20px;
-	cursor: pointer;
+	cursor: url('../../assets/plus.png'), auto;	
 	background: var(--color2);
 	overflow: hidden;
 
