--- a/src/components/card-one/card-one.styles.scss
+++ b/src/components/card-one/card-one.styles.scss
@@ -4,4 +4,21 @@
 	padding: 10px;
 	text-align: center;
 	white-space: normal;
+
+	svg {
+		height: 20%;
+		fill: white;
+		animation-delay: 1000ms;
+		animation: grow-slide 800ms cubic-bezier(0.7, 0, 0.3, 1);
+
+
+		@keyframes grow-slide {
+		    0% {
+		      transform: translateY(200%) scale(1.3) ;
+		    }
+		    100% {
+		      transform: translateY(0) scale(1);
+		    }
+		}
+	}
 }
