--- a/src/components/carousel-item/carousel-item.styles.scss
+++ b/src/components/carousel-item/carousel-item.styles.scss
@@ -7,7 +7,7 @@
 	transition: all 300ms cubic-bezier(0.7, 0, 0.3, 1);
 
 	&:after {
-		padding-bottom: 56.25%;
+		padding-bottom: 64%;
 		content: "";
 		display: block;
 	}
@@ -72,7 +72,7 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		transition: all 300ms ease-in-out;
+		transition: all 300ms cubic-bezier(0.7, 0, 0.3, 1);
 
 		&.show {
 			opacity: 1;
