--- a/src/pages/about/about.styles.scss
+++ b/src/pages/about/about.styles.scss
@@ -12,56 +12,67 @@
 		width: 88%;
 	}
 
-	.intro {
-		font-size: 300%;
-		line-height: 52px;
-		margin-top: 0;
-		font-weight: 700;
-
-		@media screen and (max-width: 991px) {
-			line-height: 48px;
-			font-size: 250%;
+	.content {
+		.details {
+			width: 60%;
+			line-height: 26px;
+			
+			br {
+				line-height: 50px;
+			}
 		}
 
-		@media screen and (max-width: 575px) {
-			line-height: 34px;
+		.intro {
+			font-size: 300%;
+			line-height: 52px;
+			margin-top: 0;
+			font-weight: 700;
+
+			@media screen and (max-width: 991px) {
+				line-height: 48px;
+				font-size: 250%;
+			}
+
+			@media screen and (max-width: 575px) {
+				line-height: 34px;
+				font-size: 160%;
+			}
+		}
+
+		.interest {
 			font-size: 160%;
+			margin-bottom: 40px;
+
+			@media screen and (max-width: 991px) {
+				font-size: 120%;
+			}
+
+			@media screen and (max-width: 575px) {
+				font-size: 116%;
+			}
 		}
-	}
 
-	.interest {
-		font-size: 160%;
-		margin-bottom: 40px;
-
-		@media screen and (max-width: 991px) {
-			font-size: 120%;
-		}
-
-		@media screen and (max-width: 575px) {
-			font-size: 116%;
-		}
-	}
-
-	.contact {
-		display: flex;
-		flex-direction: column;
-
-		.row {
+		.contact {
 			display: flex;
-			margin-bottom: 8px;
+			flex-direction: column;
 
-			> * {
-				display: block;
-			}
+			.row {
+				display: flex;
+				margin-bottom: 8px;
 
-			:first-child {
-				margin-right: 16px;
-				color: var(--color4);
-			}
+				> * {
+					display: block;
+				}
 
-			a {
-				font-size: unset;
+				:first-child {
+					margin-right: 16px;
+					color: var(--color4);
+				}
+
+				a {
+					font-size: unset;
+				}
 			}
 		}
-	}
+	}	
 }
