fixed issue with scroll on home page carousel and added monitor gif

--- a/src/components/work-item/work-item.styles.scss
+++ b/src/components/work-item/work-item.styles.scss
@@ -5,7 +5,7 @@
 	align-items: flex-end;
 	position: relative;
 	padding: 20px;
-	cursor: url('../../assets/plus.png'), auto;	
+	cursor: pointer;
 	background: var(--color2);
 	overflow: hidden;
 
