--- a/src/pages/about/about.styles.scss
+++ b/src/pages/about/about.styles.scss
@@ -2,6 +2,7 @@
 	width: 65%;
 	margin: 2% auto;
 	animation: fade-in 600ms ease-in-out;
+	position: relative;
 
 	@media screen and (max-width: 991px) {
 		width: 70%;
@@ -14,11 +15,11 @@
 
 	.content {
 		.details {
-			width: 60%;
+			width: 50%;
 			line-height: 26px;
-			
-			br {
-				line-height: 50px;
+
+			@media screen and (max-width: 767px) {
+				width: 100%;
 			}
 		}
 
@@ -48,7 +49,11 @@
 			}
 
 			@media screen and (max-width: 575px) {
-				font-size: 116%;
+				font-size: 118%;
+			}
+
+			.gold {
+				color: var(--color4);
 			}
 		}
 
@@ -74,5 +79,26 @@
 				}
 			}
 		}
+
+		.gif {
+			width: 100%;
+			display: flex;
+			justify-content: center;
+			margin-bottom: 40px;
+			
+			.monitor-gif {
+				width: 60%;
+				position: static;
+				transform: none;
+			}
+		}
 	}	
+
+	.monitor-gif {
+		position: absolute;
+		right: 0;
+		top: 50%;
+		transform: translateY(-50%);
+		width: 40%;
+	}
 }
