--- a/src/components/carousel-item/carousel-item.styles.scss
+++ b/src/components/carousel-item/carousel-item.styles.scss
@@ -1,13 +1,14 @@
 .carousel-item {
 	display: inline-block;
-	width: 40vw;
+	max-width: 40vw;
+	max-height: 30vh;
 	margin: 0 5vw;
 	position: relative;
 	background: var(--color1);
 	transition: all 300ms cubic-bezier(0.7, 0, 0.3, 1);
 
 	&:after {
-		padding-bottom: 64%;
+		padding-bottom: 56.25%;
 		content: "";
 		display: block;
 	}
@@ -55,15 +56,14 @@
 		margin: 30px;
 	}
 
-	.background-gif {
+	.background-vid {
 		position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background-image: url('../../assets/card_1.gif');
-		background-size: cover;
-		background-position: center;
+		// background-size: cover;
+		// background-position: center;
 	}
 
 	.inner-item {
