--- a/src/components/carousel-item/carousel-item.styles.scss
+++ b/src/components/carousel-item/carousel-item.styles.scss
@@ -1,7 +1,6 @@
 .carousel-item {
 	display: inline-block;
-	max-width: 40vw;
-	max-height: 30vh;
+	width: 40vw;
 	margin: 0 5vw;
 	position: relative;
 	background: var(--color1);
