--- a/src/components/carousel-item/carousel-item.styles.scss
+++ b/src/components/carousel-item/carousel-item.styles.scss
@@ -1,7 +1,7 @@
 .carousel-item {
-	display: inline-block;
-	width: 40vw;
-	margin: 0 5vw;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 100%;
 	position: relative;
 	background: var(--color1);
 	transition: all 300ms cubic-bezier(0.7, 0, 0.3, 1);
@@ -14,7 +14,7 @@
 
 	&.show {
 		opacity: 1;
-		transform: scale(1.08);
+		transform: translateY(-50%) scale(1.08);
 		box-shadow: 5px 5px 140px -18px rgba(0,0,0,0.8);
 	}
 
@@ -25,20 +25,12 @@
 		&:hover {
 			opacity: 1;
 			box-shadow: 5px 5px 140px -18px rgba(0,0,0,0.8);
-			transform: scale(1.08);
+			transform: translateY(-50%) scale(1.08);
 
 			.title {
 				opacity: 1;
 			}
 		}
-	}
-
-	&:first-child {
-		margin-left: 80vw;
-	}
-
-	&:last-child {
-		margin-right: 0;
 	}
 
 	@media screen and (max-width: 767px) {
