--- a/src/components/carousel-item/carousel-item.styles.scss
+++ b/src/components/carousel-item/carousel-item.styles.scss
@@ -53,8 +53,9 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		// background-size: cover;
-		// background-position: center;
+		background-image: url('../../assets/card_1.gif');
+		background-size: cover;
+		background-position: center;
 	}
 
 	.inner-item {
