added show content to mouse over of carousel items

--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -44,6 +44,10 @@
 		.dual-grid {
 			display: grid;
 			grid-template-columns: 1fr 1fr;
+
+			&.spread {
+				grid-row-gap: 20%;
+			}
 		}
 
 		.first-line {
