--- a/src/components/carousel-item/carousel-item.styles.scss
+++ b/src/components/carousel-item/carousel-item.styles.scss
@@ -10,6 +10,10 @@
 		padding-bottom: 56.25%;
 		content: "";
 		display: block;
+
+		@media screen and (min-width: 768px) and (max-width: 1075px) {
+			padding-bottom: 64%;
+		}
 	}
 
 	&.show {
