--- a/src/App.scss
+++ b/src/App.scss
@@ -53,6 +53,7 @@ a {
       display: flex;
       justify-content: center;
       align-items: center;
+      background: transparent;
     }
   }
 
