--- a/src/components/carousel-item/carousel-item.styles.scss
+++ b/src/components/carousel-item/carousel-item.styles.scss
@@ -20,6 +20,11 @@
 		opacity: 1;
 		transform: translateY(-50%) scale(1.08);
 		box-shadow: 5px 5px 140px -18px rgba(0,0,0,0.8);
+
+		@media screen and (max-width: 767px) {
+			box-shadow: 5px 5px 50px -18px rgba(0,0,0,0.8);
+			transform: none;
+		}
 	}
 
 	&.hide {
@@ -28,17 +33,9 @@
 	}
 
 	@media screen and (max-width: 767px) {
-		&:first-child {
-			margin: 30px;
-		}
-
-		&:last-child {
-			margin: 30px;
-		}
-
 		display: unset;
-		width: 80%;
-		margin: 30px;
+		width: 90%;
+		margin: 10px 0;
 	}
 
 	.background-vid {
