--- a/src/components/carousel/carousel.styles.scss
+++ b/src/components/carousel/carousel.styles.scss
@@ -31,6 +31,10 @@
 			width: 40vw;
 			height: 100%;
 			margin: 0 5vw;
+
+			&:last-child {
+				margin-right: 50vw;
+			}
 		}
 	}
 
@@ -100,6 +104,38 @@
 			      transform: translateY(0);
 			    }
 		    }
+		}
+	}
+
+	.more {
+		opacity: 0;
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		transition: all 300ms ease-in-out;
+		width: 15vw;
+		height: 15vw;
+
+		&.show {
+			opacity: 1;
+		}
+	}
+
+	.social-panel {
+		opacity: 0;
+		position: fixed;
+		top: 50%;
+		right: 2%;
+		transform: translateY(-50%);
+		transition: all 300ms ease-in-out;
+
+		@media screen and (max-width: 991px) {
+			right: 4%;
+		}
+
+		&.show {
+			opacity: 1;
 		}
 	}
 
