--- a/src/pages/work/work.styles.scss
+++ b/src/pages/work/work.styles.scss
@@ -49,7 +49,7 @@
 		}
 
 		.holder {
-			background-image: url('../../assets/card_1.gif');
+			background-image: url('../../assets/card.gif');
 			background-size: cover;
 			background-position: center;
 
