--- a/src/components/see-more/see-more.styles.scss
+++ b/src/components/see-more/see-more.styles.scss
@@ -1,13 +1,16 @@
 .see-more {
 	width: 100%;
 	height: 100%;
-	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 
 	.iris {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
+		// position: absolute;
+		// top: 50%;
+		// left: 50%;
+		// transform: translate(-50%, -50%);
+		position: relative;
 		width: 50%;
 		height: 50%;
 		border-radius: 50%;
@@ -15,9 +18,8 @@
 
 		.pupil {
 			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
+			top: 0;
+			left: 0;
 			width: 40%;
 			height: 40%;
 			border-radius: 50%;
