--- a/src/components/see-more/see-more.styles.scss
+++ b/src/components/see-more/see-more.styles.scss
@@ -6,20 +6,17 @@
 	align-items: center;
 
 	.iris {
-		// position: absolute;
-		// top: 50%;
-		// left: 50%;
-		// transform: translate(-50%, -50%);
 		position: relative;
 		width: 50%;
 		height: 50%;
 		border-radius: 50%;
 		border: solid 2px white;
+		overflow: hidden;
 
 		.pupil {
 			position: absolute;
-			top: 0;
-			left: 0;
+			top: 30%;
+			left: 30%;
 			width: 40%;
 			height: 40%;
 			border-radius: 50%;
