--- a/src/components/see-more/see-more.styles.scss
+++ b/src/components/see-more/see-more.styles.scss
@@ -5,22 +5,69 @@
 	justify-content: center;
 	align-items: center;
 
-	.iris {
-		position: relative;
-		width: 50%;
-		height: 50%;
-		border-radius: 50%;
-		border: solid 2px white;
+	.outer-eye {
+		width: 60%;
+		height: 60%;
+		background: white;
+		border-radius: 75% 0;
+		transform: rotate(45deg);
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		overflow: hidden;
+		box-shadow: 5px 5px 50px -18px rgba(0,0,0,0.8);
 
-		.pupil {
-			position: absolute;
-			top: 30%;
-			left: 30%;
-			width: 40%;
-			height: 40%;
+		.iris {
+			position: relative;
+			width: 70%;
+			height: 70%;
 			border-radius: 50%;
-			background: white;
+			background: var(--color4);
+			overflow: hidden;
+
+			.pupil {
+				position: absolute;
+				top: 30%;
+				left: 30%;
+				width: 40%;
+				height: 40%;
+				border-radius: 50%;
+				background: black;
+				display: flex;
+				justify-content: flex-end;
+
+				> * {
+					width: 40%;
+					height: 40%;
+					border-radius: 50%;
+					background: white;
+				}
+			}
+		}
+
+		.shut {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			width: 150%;
+			height: 100%;
+			transform: translate(-50%, -50%) rotate(-45deg);
+
+			&:after {
+				display: block;
+				content: "";
+				width: 100%;
+				height: 0;
+				border-radius: 0 0 50% 50%;
+				background: var(--color2);
+				transition: all 300ms ease-in;
+			}
+
+			&:hover {
+				&:after {
+					height: 100%;
+				}
+			}
 		}
 	}
 }
