--- a/src/components/see-more/see-more.styles.scss
+++ b/src/components/see-more/see-more.styles.scss
@@ -15,7 +15,9 @@
 		justify-content: center;
 		align-items: center;
 		overflow: hidden;
+		cursor: pointer;
 		box-shadow: 5px 5px 50px -18px rgba(0,0,0,0.8);
+		outline: none;
 
 		.iris {
 			position: relative;
@@ -45,7 +47,7 @@
 			}
 		}
 
-		.shut {
+		.eye-lid {
 			position: absolute;
 			top: 50%;
 			left: 50%;
@@ -60,12 +62,25 @@
 				height: 0;
 				border-radius: 0 0 50% 50%;
 				background: var(--color2);
-				transition: all 300ms ease-in;
+				// transition: all 300ms ease-in;
 			}
 
-			&:hover {
+			&.shut {
 				&:after {
-					height: 100%;
+					// height: 100%;
+					animation: close-and-open 600ms ease-in-out;
+
+					@keyframes close-and-open {
+					    0% {
+							height: 0;
+					    }
+					    50% {
+					    	height: 100%;
+					    }
+					    100% {
+							height: 0;
+					    }
+					}
 				}
 			}
 		}
