--- a/src/components/carousel/carousel.styles.scss
+++ b/src/components/carousel/carousel.styles.scss
@@ -33,7 +33,7 @@
 			margin: 0 5vw;
 
 			&:last-child {
-				margin-right: 50vw;
+				margin-right: 60vw;
 			}
 		}
 	}
@@ -126,12 +126,13 @@
 		opacity: 0;
 		position: fixed;
 		top: 50%;
-		right: 2%;
+		right: 0;
+		width: 10vw;
 		transform: translateY(-50%);
 		transition: all 300ms ease-in-out;
 
 		@media screen and (max-width: 991px) {
-			right: 4%;
+			right: 2%;
 		}
 
 		&.show {
