--- a/src/components/see-more/see-more.styles.scss
+++ b/src/components/see-more/see-more.styles.scss
@@ -85,4 +85,24 @@
 			}
 		}
 	}
+
+	.more-line {
+		position: absolute;
+		top: -20%;
+		left: 50%;
+		transform: translateX(-50%);
+		text-align: center;
+	}
+
+	.options {
+		position: absolute;
+		bottom: -20%;
+		width: 100%;
+		display: flex;
+		justify-content: space-between;
+
+		> * {
+			font-size: 110%;
+		}
+	}
 }
