adjusted gif on about and home

--- a/src/pages/home/home.styles.scss
+++ b/src/pages/home/home.styles.scss
@@ -19,8 +19,12 @@
 
 			.home-gif {
 				width: 80%;
-				margin: 60px 11% 0 9%;
+				margin: 90px 11% 0 9%;
 				z-index: -1;
+
+				img {
+					width: 100%;
+				}
 			}
 		}	
 	}
