--- a/src/components/work-item/work-item.styles.scss
+++ b/src/components/work-item/work-item.styles.scss
@@ -28,9 +28,7 @@
 		left: 0;
 		right: 0;
 		bottom: 0;
-		background-position: center;
-		background-size: cover;
-		background-repeat: no-repeat;
+		width: 100%;
 		overflow: hidden;
 		transition: all 300ms ease-out;
 	}
