--- a/src/pages/work/work.styles.scss
+++ b/src/pages/work/work.styles.scss
@@ -8,6 +8,7 @@
 	}
 
 	.work-collection {
+		opacity: 0;
 		width: 100%;
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
@@ -19,6 +20,7 @@
 			"tele tele holder1 wechat";
 		grid-column-gap: 0.8em;
 		grid-row-gap: 0.8em;
+		transition: all 300ms ease-out;
 
 		@media screen and (max-width: 575px) {
 			grid-template-columns: repeat(2, 1fr);
@@ -40,6 +42,10 @@
 		  padding-bottom: 100%;
 		  grid-row: 1 / 1;
 		  grid-column: 1 / 1;
+		}
+
+		&.show {
+			opacity: 1;
 		}
 
 		> * {
