adjusted home gif to always hold its space

--- a/src/pages/home/home.styles.scss
+++ b/src/pages/home/home.styles.scss
@@ -18,7 +18,8 @@
 			height: unset;
 
 			.home-gif {
-				width: 80%;
+				width: 80vw;
+				height: 45vw;
 				margin: 90px 11% 0 9%;
 				z-index: -1;
 
