added the see more eye to mobile home page

--- a/src/components/carousel-item-list/carousel-item-list.styles.scss
+++ b/src/components/carousel-item-list/carousel-item-list.styles.scss
@@ -5,4 +5,10 @@
 	align-items: center;
 	transform: translateY(-20px);
 	padding: 20px 0;
+
+	.list-more {
+		margin-top: 20vw;
+		width: 50vw;
+		height: 50vw;
+	}
 }
