--- a/src/components/work-item/work-item.styles.scss
+++ b/src/components/work-item/work-item.styles.scss
@@ -7,12 +7,16 @@
 	padding: 20px;
 	cursor: pointer;
 	background: var(--color2);
+	background-size: cover;
+	background-position: center;
 	overflow: hidden;
 
 	&:hover {
 
 		.image {
-			opacity: 0.1
+			&.show {
+				opacity: 0.1
+			}
 		}
 
 		.details {
@@ -22,7 +26,7 @@
 	}
 
 	.image {
-		opacity: 1;
+		opacity: 0;
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -32,6 +36,10 @@
 		height: 100%;
 		overflow: hidden;
 		transition: all 300ms ease-out;
+
+		&.show {
+			opacity: 1;
+		}
 	}
 
 	.details {
