--- a/src/pages/about/about.styles.scss
+++ b/src/pages/about/about.styles.scss
@@ -84,11 +84,18 @@
 			width: 100%;
 			display: flex;
 			justify-content: center;
-			margin-bottom: 40px;
+			align-items: center;
+			margin: 20px 0;
+
+			&:after {
+				content: "";
+				display: block;
+				padding-bottom: 56.25%;
+			}
 			
 			.monitor-gif {
-				width: 60%;
-				height: 33.75%;
+				width: 80%;
+				height: 45%;
 				position: static;
 				transform: none;
 			}
