--- a/src/components/work-item/work-item.styles.scss
+++ b/src/components/work-item/work-item.styles.scss
@@ -35,7 +35,7 @@
 		width: 100%;
 		height: 100%;
 		overflow: hidden;
-		transition: all 300ms ease-out;
+		transition: all 300ms ease-in-out;
 
 		&.show {
 			opacity: 1;
@@ -47,7 +47,7 @@
 		flex-direction: column;
 		color: white;
 		font-size: 1em;
-		transition: all 300ms ease-out;
+		transition: all 300ms ease-in-out;
 		transform: translateY(20px);
 		opacity: 0;
 
