created enter and fade component to handle animation on scroll

--- a/src/components/carousel-item-list/carousel-item-list.styles.scss
+++ b/src/components/carousel-item-list/carousel-item-list.styles.scss
@@ -6,6 +6,10 @@
 	transform: translateY(-20px);
 	padding: 20px 0;
 
+	.item-container {
+		margin: 20px 5%;
+	}
+
 	.list-more {
 		margin-top: 20vw;
 		width: 50vw;
