adjusted size of developer gif

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -35,7 +35,7 @@
     }
 	
   	span {
-      font-family: 'Inconsolata', monospace;
+      font-family: 'Inconsolata', monospace, sans-serif;
   		display: block;
   		font-size: 18px;
       line-height: 29px;
