fixed appearance of gifs and added smaller sizes

--- a/src/pages/work/work.styles.scss
+++ b/src/pages/work/work.styles.scss
@@ -50,7 +50,7 @@
 		}
 
 		.holder {
-			background-image: url('../../assets/card.gif');
+			background-image: url('../../assets/Card_1000.gif');
 			background-size: cover;
 			background-position: center;
 
