--- a/src/components/carousel-item/carousel-item.styles.scss
+++ b/src/components/carousel-item/carousel-item.styles.scss
@@ -38,7 +38,7 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background-image: url('../../assets/card.gif');
+		background-image: url('../../assets/Card_1000.gif');
 		background-size: cover;
 		background-position: center;
 	}
