--- a/src/pages/about/about.styles.scss
+++ b/src/pages/about/about.styles.scss
@@ -16,7 +16,8 @@
 	.content {
 		.details {
 			width: 50%;
-			line-height: 26px;
+			line-height: 30px;
+			font-size: 110%;
 
 			@media screen and (max-width: 767px) {
 				width: 100%;
@@ -36,20 +37,21 @@
 
 			@media screen and (max-width: 575px) {
 				line-height: 34px;
-				font-size: 160%;
+				font-size: 170%;
 			}
 		}
 
 		.interest {
 			font-size: 160%;
 			margin-bottom: 40px;
+			font-weight: 600;
 
 			@media screen and (max-width: 991px) {
-				font-size: 120%;
+				font-size: 140%;
 			}
 
 			@media screen and (max-width: 575px) {
-				font-size: 118%;
+				font-size: 140%;
 			}
 
 			.gold {
@@ -60,6 +62,7 @@
 		.contact {
 			display: flex;
 			flex-direction: column;
+			font-size: 110%;
 
 			.row {
 				display: flex;
