changed loading of images in work items to be individual

--- a/src/pages/work/work.styles.scss
+++ b/src/pages/work/work.styles.scss
@@ -33,6 +33,8 @@
 				"tele tele"
 				"holder1 wechat"
 				"holder1 wechat";
+			grid-column-gap: 1em;
+			grid-row-gap: 1em;
 		}
 
 		&::before {
