--- a/src/components/work-item/work-item.styles.scss
+++ b/src/components/work-item/work-item.styles.scss
@@ -42,6 +42,7 @@
 	background-size: cover;
 	background-position: center;
 	overflow: hidden;
+	transition: all 300ms ease-in-out;
 
 	@media screen and (min-width: 576px) {
 		&:hover {
@@ -57,6 +58,10 @@
 				transform: translateY(0);
 			}
 		}
+	}
+
+	&.loading {
+		background-image: url('../../assets/Card_1000.gif');
 	}
 
 	.image {
