--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,11 @@ html {
   background: var(--color2);
 }
 
+@font-face {
+  font-family: sofia-pro, sans-serif;
+  font-display: swap;
+}
+
 body {
   color: white;
   overflow-x: hidden;
