--- a/src/pages/work-detail/work-detail.styles.scss
+++ b/src/pages/work-detail/work-detail.styles.scss
@@ -10,20 +10,12 @@
 		}
 	}
 
-	.video {
+	.video-container {
 		position: relative;
 		padding-bottom: 56.25%;
 		padding-top: 25px;
 		height: 0;
 		margin: 20px 0;
-
-		iframe {
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-		}
 	}
 
 	.info {
