--- a/src/components/carousel-item/carousel-item.styles.scss
+++ b/src/components/carousel-item/carousel-item.styles.scss
@@ -5,6 +5,7 @@
 	position: relative;
 	background: var(--color1);
 	transition: all 300ms cubic-bezier(0.7, 0, 0.3, 1);
+	overflow: hidden;
 
 	&:after {
 		padding-bottom: 56.25%;
@@ -32,15 +33,12 @@
 		box-shadow: none;
 	}
 
-	.background-vid {
+	.background-canvas {
 		position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background-image: url('../../assets/Card_1000.gif');
-		background-size: cover;
-		background-position: center;
 	}
 
 	.inner-item {
