--- a/src/components/video/video.styles.scss
+++ b/src/components/video/video.styles.scss
@@ -9,20 +9,11 @@
 		outline: none;
 	}
 
-	.loader-gif {
-		background: url('../../assets/Card_1000.gif');
+	:last-child {
 		position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
 		height: 100%;
-		opacity: 0;
-		pointer-events: none;
-		transition: all 300ms ease-in-out;
-
-		&.show {
-			opacity: 1;
-
-		}
 	}
 }
