--- a/src/components/work-item/work-item.styles.scss
+++ b/src/components/work-item/work-item.styles.scss
@@ -60,8 +60,12 @@
 		}
 	}
 
-	&.loading {
-		background-image: url('../../assets/Card_1000.gif');
+	:first-child {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
 	}
 
 	.image {
