updated work anv to projects and added explanation on work page

--- a/src/pages/work/work.styles.scss
+++ b/src/pages/work/work.styles.scss
@@ -7,6 +7,13 @@
 		margin: 150px auto 0 auto;
 	}
 
+	.work-header {
+		margin: 22px auto;
+		display: flex;
+		justify-content: center;
+		text-align: center;
+	}
+
 	.work-collection {
 		width: 100%;
 		display: grid;
