updated privacy policy layout

--- a/src/pages/privacy-policy/privacy-policy.styles.scss
+++ b/src/pages/privacy-policy/privacy-policy.styles.scss
@@ -1,8 +1,8 @@
-.additonal-information {
+.privacy-policy {
     text-align: center;
 
     h2 {
-        margin: 20px 0 40px 0;
+        margin: 40px 0 20px 0;
         text-transform: capitalize;
     }
 }
